fix: EmailClient -> spacing & add label to inform user of important step

--- a/frontend/src/components/EmailClient/EmailClient.css
+++ b/frontend/src/components/EmailClient/EmailClient.css
@@ -22,9 +22,8 @@
     .emailclient__header{
         width: 90%;
         text-align: center;
-
         border-bottom: 1px solid #ababba42;
-        
+        padding-bottom: 1.2rem;
     }
         .emailclient h1{
             color: #e2e2e3;
@@ -138,6 +137,16 @@
                     margin: 1rem 0 .5rem 0;
                 }
 
+            .label-contentpage{
+                position: absolute;
+                top: -16%;
+                left: .2rem;
+                color: #ababba;
+                font-size: 1rem;
+            }
+            .label-contentpage span{
+                color: #c53ebe;
+            }
             textarea.emailclient__list--input,
             input.emailclient__list--input {
                 width: 100%;
